--- a/.github/workflows/linux-appimage.yml
+++ b/.github/workflows/linux-appimage.yml
@@ -1,7 +1,7 @@
 name: linux-appimage
 
 on:
-  workflow_dispatch: # Enables manual triggering
+  workflow_dispatch:
 
 jobs:
   build:
@@ -15,25 +15,33 @@ jobs:
       with:
         node-version: 20.x
 
-    - name: Install dependencies
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libfuse2
+
+    - name: Install project dependencies
       run: |
         npm install -g yarn
         npm install
 
     - name: Build project
-      run: npm run b
+      run: npm run b --verbose
 
-    - name: Build AppImage
+    - name: List build/bin contents
+      run: ls -la build/bin
+
+    - name: Build AppImage with electron-builder
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         BUILD_NUMBER: ${{ secrets.BUILD_NUMBER }}
         CUSTOM_UPLOAD_URL: ${{ secrets.CUSTOM_UPLOAD_URL }}
-      run: node build/bin/build-linux-appimage
+      run: npx electron-builder --linux appimage
 
     - name: Upload AppImage artifact
       uses: actions/upload-artifact@v4
       with:
         name: appimage
         path: |
-          **/*.AppImage
+          dist/*.AppImage
         retention-days: 7
